[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "image_interpolation"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.2.3",
    "polars>=1.23.0",
    "pyperf>=2.8.0",
    "ruff>=0.9.7",
]
[tool.maturin]
features = ["pyo3/extension-module"]
